# fast-mnist-nn

./: .gitignore  AGENTS.md  CMakeLists.txt  Matrix.cpp  Matrix.h  NeuralNet.cpp  NeuralNet.h  README.md  main.cpp
apps/: fast_mnist_cli.cpp
benchmarks/: bench_matrix.cpp
docs/benchmarks/: bench_env.md  bench_summary.csv  benchmarks.md
docs/benchmarks/runs/: bench-20251221-132025.json
include/fast_mnist/: Matrix.h  NeuralNet.h
src/: Matrix.cpp  NeuralNet.cpp
tests/: test_matrix.cpp
tools/: prepare_mnist.py  run_benchmarks.py
